# Gen-AI-Home-Interior-Designer

./: README.md
backend/: .env.example  pyproject.toml
frontend/: index.html
frontend/src/: App.jsx
frontend/src/components/: Footer.jsx
